--- a/qt_gstreamer/CMakeLists.txt
+++ b/qt_gstreamer/CMakeLists.txt
@@ -1,32 +1,16 @@
 cmake_minimum_required(VERSION 3.5)
 
-if(LINUX)
-    target_compile_options(${TARGET_NAME} PRIVATE -Wall -Wextra -pedantic -Werror)
-endif()
-
-if(MSVC)
-    target_compile_options(${TARGET_NAME} PRIVATE /W4 /WX)
-endif()
-
 project(qt_gstreamer VERSION 0.1 LANGUAGES CXX)
 
-set(CMAKE_AUTOUIC ON)
-set(CMAKE_AUTOMOC ON)
-set(CMAKE_AUTORCC ON)
-
-set(CMAKE_CXX_STANDARD 17)
-set(CMAKE_CXX_STANDARD_REQUIRED ON)
-
 find_package(Qt5 REQUIRED COMPONENTS Core)
-
 
 find_package(PkgConfig REQUIRED)
 pkg_check_modules(GSTREAMER REQUIRED gstreamer-1.0)
 
 
 file(GLOB SRC_FILES
-  ${PROJECT_SOURCE_DIR}/sources/*.cpp
-  ${PROJECT_SOURCE_DIR}/include/*.h
+  ${CMAKE_CURRENT_LIST_DIR}/sources/*.cpp
+  ${CMAKE_CURRENT_LIST_DIR}/include/*.h
 )
 
 add_library(${PROJECT_NAME} SHARED
@@ -36,24 +20,6 @@ add_library(${PROJECT_NAME} SHARED
 target_link_libraries(${PROJECT_NAME} PRIVATE Qt5::Core ${GSTREAMER_LIBRARIES})
 
 target_include_directories(${PROJECT_NAME} PUBLIC
-	"${PROJECT_SOURCE_DIR}/include"
+	${CMAKE_CURRENT_LIST_DIR}/include
 	${GSTREAMER_INCLUDE_DIRS}
 )
-
-set_target_properties(${PROJECT_NAME} PROPERTIES
-    MACOSX_BUNDLE_GUI_IDENTIFIER my.example.com
-    MACOSX_BUNDLE_BUNDLE_VERSION ${PROJECT_VERSION}
-    MACOSX_BUNDLE_SHORT_VERSION_STRING ${PROJECT_VERSION_MAJOR}.${PROJECT_VERSION_MINOR}
-    MACOSX_BUNDLE TRUE
-    WIN32_EXECUTABLE TRUE
-)
-
-install(TARGETS ${PROJECT_NAME}
-    BUNDLE DESTINATION .
-    LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
-)
-
-
-
-
-
