Sqlite database added.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,6 +17,9 @@ set(CMAKE_AUTORCC ON)
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
+set(QT_DEBUG_PLUGINS 1)
+
+
 add_subdirectory(qt_gstreamer)
 add_subdirectory(qt_bluetooth)
 add_subdirectory(qt_application)
