--- a/.gitignore
+++ b/.gitignore
@@ -72,5 +72,5 @@ CMakeLists.txt.user*
 *.dll
 *.exe
 
-include/variables.h
-qt_application/include/variables.h
+# configured files
+qt_general_use/include/variables.h
