--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,7 +19,8 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 set(QT_DEBUG_PLUGINS 1)
 
-
+add_subdirectory(qt_general_use)
+add_subdirectory(qt_search_devices)
 add_subdirectory(qt_gstreamer)
 add_subdirectory(qt_bluetooth)
 add_subdirectory(qt_application)
