--- a/qt_application/CMakeLists.txt
+++ b/qt_application/CMakeLists.txt
@@ -1,10 +1,9 @@
 project(qt_application VERSION 0.1 LANGUAGES CXX)
 
-find_package(Qt5 REQUIRED COMPONENTS Widgets Sql)
-
-set(PROJECT_PATH \"${CMAKE_SOURCE_DIR}\")
-set(RESOURCES_PATH \"${CMAKE_SOURCE_DIR}/resources\")
-configure_file(${CMAKE_CURRENT_LIST_DIR}/include/variables.h.in ${CMAKE_CURRENT_LIST_DIR}/include/variables.h @ONLY)
+find_package(Qt5 REQUIRED COMPONENTS
+	Widgets
+	Sql
+)
 
 file(GLOB SRC_FILES
 	${CMAKE_CURRENT_LIST_DIR}/sources/*.cpp
@@ -26,11 +25,13 @@ endif()
 target_link_libraries(${PROJECT_NAME} PRIVATE
 	Qt5::Widgets
 	Qt5::Sql
+	qt_general_use
 	qt_gstreamer
 	qt_bluetooth
+	qt_search_devices
 )
 
-target_include_directories(${PROJECT_NAME} PRIVATE
+target_include_directories(${PROJECT_NAME} PUBLIC
 	${CMAKE_CURRENT_LIST_DIR}/include
 )
 
