Subprojects naming issue resolved. Database options table added.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,8 +19,8 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 set(QT_DEBUG_PLUGINS 1)
 
-add_subdirectory(qt_general_use)
-add_subdirectory(qt_search_devices)
-add_subdirectory(qt_gstreamer)
-add_subdirectory(qt_bluetooth)
-add_subdirectory(qt_application)
+add_subdirectory(general_use)
+add_subdirectory(search_devices)
+add_subdirectory(gstreamer)
+add_subdirectory(bluetooth)
+add_subdirectory(application)
