Device id (mac address) fix.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,3 +24,14 @@ add_subdirectory(search_devices)
 add_subdirectory(gstreamer_interface)
 add_subdirectory(bluetooth)
 add_subdirectory(application)
+
+if(BUILD_DOCS)
+  set(DOXYGEN_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/_docs)
+#  set(DOXYGEN_EXAMPLE_PATH examples)
+  set(DOXYGEN_GENERATE_HTML NO)
+  set(DOXYGEN_GENERATE_MAN YES)
+  find_package(Doxygen)
+  doxygen_add_docs(docs include)
+  install(DIRECTORY ${DOXYGEN_OUTPUT_DIRECTORY}/man DESTINATION share)
+  # add_dependencies(install docs) need to call target docs before install or package
+endif()
