--- a/application/CMakeLists.txt
+++ b/application/CMakeLists.txt
@@ -1,6 +1,6 @@
 project(application VERSION 0.1 LANGUAGES CXX)
 
-find_package(Qt5 REQUIRED COMPONENTS
+find_package(Qt${QT_VERSION} REQUIRED COMPONENTS
 	Widgets
 	Sql
 	Network
@@ -11,22 +11,14 @@ file(GLOB SRC_FILES
 	${CMAKE_CURRENT_LIST_DIR}/include/*.h
 )
 
-if(ANDROID)
-    add_library(${PROJECT_NAME} SHARED
-        ${SRC_FILES}
-    )
-# Define properties for Android with Qt 5 after find_package() calls as:
-#    set(ANDROID_PACKAGE_SOURCE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/android")
-else()
-    add_executable(${PROJECT_NAME}
-		${SRC_FILES}
-    )
-endif()
+qt_add_executable(${PROJECT_NAME}
+	${SRC_FILES}
+)
 
 target_link_libraries(${PROJECT_NAME} PRIVATE
-	Qt5::Widgets
-	Qt5::Sql
-	Qt5::Network
+	Qt${QT_VERSION}::Widgets
+	Qt${QT_VERSION}::Sql
+	Qt${QT_VERSION}::Network
 	general_use
 	gstreamer_interface
 	bluetooth
