--- a/bluetooth/CMakeLists.txt
+++ b/bluetooth/CMakeLists.txt
@@ -1,7 +1,6 @@
 project(bluetooth VERSION 0.1 LANGUAGES CXX)
 
-find_package(Qt5 REQUIRED COMPONENTS
-	Widgets
+find_package(Qt${QT_VERSION} REQUIRED COMPONENTS
 	Core
 )
 
@@ -14,7 +13,9 @@ add_library(${PROJECT_NAME} SHARED
 	${SRC_FILES}
 )
 
-target_link_libraries(${PROJECT_NAME} PRIVATE Qt5::Core)
+target_link_libraries(${PROJECT_NAME} PRIVATE
+	Qt${QT_VERSION}::Core
+)
 
 target_include_directories(${PROJECT_NAME} PUBLIC
 	${CMAKE_CURRENT_LIST_DIR}/include
