--- a/ssl_server/CMakeLists.txt
+++ b/ssl_server/CMakeLists.txt
@@ -1,6 +1,6 @@
 project(ssh_server VERSION 0.1 LANGUAGES CXX)
 
-find_package(Qt5 REQUIRED COMPONENTS
+find_package(Qt${QT_VERSION} REQUIRED COMPONENTS
 	Core
 	Network
 )
@@ -10,13 +10,16 @@ file(GLOB SRC_FILES
 	${CMAKE_CURRENT_LIST_DIR}/include/*.h
 )
 
+link_libraries(ssl  crypto)
+
 add_library(${PROJECT_NAME} SHARED
 	${SRC_FILES}
 )
 
 target_link_libraries(${PROJECT_NAME} PRIVATE
-	Qt5::Core
-	Qt5::Network
+	Qt${QT_VERSION}::Core
+	Qt${QT_VERSION}::Network
+	general_use
 )
 
 target_include_directories(${PROJECT_NAME} PUBLIC
