--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,6 +25,8 @@ option(BUILD_TESTS "Build tests" OFF)
 option(BUILD_DOCS "Build documentation" OFF)
 option(BUILD_COVERAGE "Build code coverage" OFF)
 
+add_subdirectory(qmdnsengine_extern)
+
 add_subdirectory(general_use)
 add_subdirectory(search_devices)
 add_subdirectory(ssl_server)
