minor build changes

--- a/ssl_server/CMakeLists.txt
+++ b/ssl_server/CMakeLists.txt
@@ -5,12 +5,14 @@ find_package(Qt${QT_VERSION} REQUIRED COMPONENTS
 	Network
 )
 
+find_package(OpenSSL REQUIRED)
+
 file(GLOB SRC_FILES
 	${CMAKE_CURRENT_LIST_DIR}/sources/*.cpp
 	${CMAKE_CURRENT_LIST_DIR}/include/*.h
 )
 
-link_libraries(ssl  crypto)
+link_libraries(OpenSSL::SSL OpenSSL::Crypto)
 
 add_library(${PROJECT_NAME} SHARED
 	${SRC_FILES}
@@ -20,6 +22,7 @@ target_link_libraries(${PROJECT_NAME} PRIVATE
 	Qt${QT_VERSION}::Core
 	Qt${QT_VERSION}::Network
 	general_use
+	OpenSSL::SSL
 )
 
 target_include_directories(${PROJECT_NAME} PUBLIC
