--- a/.gitignore
+++ b/.gitignore
@@ -75,3 +75,5 @@ CMakeLists.txt.user*
 # configured files
 general_use/include/variables.h
 puml/
+general_use/include/variables.h
+general_use/include/variables.h
