--- a/ssl_server/CMakeLists.txt
+++ b/ssl_server/CMakeLists.txt
@@ -11,12 +11,11 @@ file(GLOB SRC_FILES
 )
 
 add_library(${PROJECT_NAME} SHARED
-        ${SRC_FILES}
+	${SRC_FILES}
 )
 
 if (ANDROID)
-    #    set something like E:/Users/<user>/AppData/Local/Android/Sdk/android_openssl
-
+	#set to ANDROID_OPENSSL_ROOT something like E:/Users/<user>/AppData/Local/Android/Sdk/android_openssl
     include("${ANDROID_OPENSSL_ROOT}/CMakeLists.txt")
     include_directories("${ANDROID_OPENSSL_ROOT}/ssl_3/include")
 
@@ -24,20 +23,18 @@ if (ANDROID)
         ${ANDROID_EXTRA_LIBS}
     )
 
-elseif()
+else()
     find_package(OpenSSL REQUIRED)
     target_link_libraries(${PROJECT_NAME} PRIVATE
-        ssl
+		OpenSSL::SSL
     )
 endif()
 
 target_link_libraries(${PROJECT_NAME} PRIVATE
 	Qt${QT_VERSION}::Core
 	Qt${QT_VERSION}::Network
-        general_use
+	general_use
 )
-
-
 
 target_include_directories(${PROJECT_NAME} PUBLIC
 	${CMAKE_CURRENT_LIST_DIR}/include
