--- a/general_use/CMakeLists.txt
+++ b/general_use/CMakeLists.txt
@@ -20,7 +20,6 @@ add_library(${PROJECT_NAME} SHARED
 	${SRC_FILES}
 )
 
-
 target_link_libraries(${PROJECT_NAME} PRIVATE
 	Qt${QT_VERSION}::Widgets
 	Qt${QT_VERSION}::Network
@@ -29,6 +28,22 @@ target_link_libraries(${PROJECT_NAME} PRIVATE
 target_include_directories(${PROJECT_NAME} PUBLIC
 	${CMAKE_CURRENT_LIST_DIR}/include
 )
+
+if (ANDROID)
+	#set to ANDROID_OPENSSL_ROOT something like E:/Users/<user>/AppData/Local/Android/Sdk/android_openssl
+	include("${ANDROID_OPENSSL_ROOT}/CMakeLists.txt")
+	include_directories("${ANDROID_OPENSSL_ROOT}/ssl_3/include")
+
+	target_link_libraries(${PROJECT_NAME} PRIVATE
+		${ANDROID_EXTRA_LIBS}
+	)
+
+else()
+	find_package(OpenSSL REQUIRED)
+	target_link_libraries(${PROJECT_NAME} PRIVATE
+		OpenSSL::SSL
+	)
+endif()
 
 if(BUILD_TESTS)
 	file(GLOB TEST_FILES
