Additional fields of DeviceWidget added to database.

--- a/.gitignore
+++ b/.gitignore
@@ -77,3 +77,4 @@ general_use/include/variables.h
 puml/
 general_use/include/variables.h
 general_use/include/variables.h
+general_use/include/variables.h
