--- a/general_use/include/variables.h.in
+++ b/general_use/include/variables.h.in
@@ -2,6 +2,14 @@
 
 #include <QDir>
 
+#define MINIMUM_VIDEO_BITRAIT 100
+#define DEFAULT_VIDEO_BITRAIT 200
+#define MAXIMUM_VIDEO_BITRAIT 300
+
+#define MINIMUM_AUDIO_BITRAIT 100
+#define DEFAULT_AUDIO_BITRAIT 200
+#define MAXIMUM_AUDIO_BITRAIT 300
+
 #define PROJECT_PATH "@PROJECT_PATH@"
 
 #define RESOURCES_PATH "@RESOURCES_PATH@"
