--- a/bluetooth/CMakeLists.txt
+++ b/bluetooth/CMakeLists.txt
@@ -19,11 +19,11 @@ add_library(${PROJECT_NAME} SHARED
 
 target_link_libraries(${PROJECT_NAME} PRIVATE
 	Qt${QT_VERSION_MAJOR}::Core
-        Qt${QT_VERSION_MAJOR}::Bluetooth
-        Qt${QT_VERSION_MAJOR}::DBus
-        Qt${QT_VERSION_MAJOR}::Core
-        Qt${QT_VERSION_MAJOR}::Multimedia
+	Qt${QT_VERSION_MAJOR}::Bluetooth
+	Qt${QT_VERSION_MAJOR}::DBus
+	Qt${QT_VERSION_MAJOR}::Multimedia
 	Qt${QT_VERSION_MAJOR}::Widgets
+	general_use
 )
 
 target_include_directories(${PROJECT_NAME} PUBLIC
