--- a/bluetooth/CMakeLists.txt
+++ b/bluetooth/CMakeLists.txt
@@ -4,7 +4,7 @@ find_package(Qt${QT_VERSION} REQUIRED COMPONENTS
     Bluetooth
     Core
     Multimedia
-    DBus
+#    DBus
     Widgets
 )
 
@@ -20,10 +20,11 @@ add_library(${PROJECT_NAME} SHARED
 target_link_libraries(${PROJECT_NAME} PRIVATE
 	Qt${QT_VERSION_MAJOR}::Core
 	Qt${QT_VERSION_MAJOR}::Bluetooth
-	Qt${QT_VERSION_MAJOR}::DBus
+#	Qt${QT_VERSION_MAJOR}::DBus
 	Qt${QT_VERSION_MAJOR}::Multimedia
-	Qt${QT_VERSION_MAJOR}::Widgets
+        Qt${QT_VERSION_MAJOR}::Widgets
 	general_use
+        ${ANDROID_EXTRA_LIBS}
 )
 
 target_include_directories(${PROJECT_NAME} PUBLIC
