--- a/search_devices/CMakeLists.txt
+++ b/search_devices/CMakeLists.txt
@@ -30,6 +30,12 @@ if(ANDROID)
     )
 endif()
 
+if(WIN32)
+    target_include_directories(${PROJECT_NAME} PUBLIC
+        "${CMAKE_SOURCE_DIR}/qmdnsengine_extern/include"
+    )
+endif()
+
 target_include_directories(${PROJECT_NAME} PUBLIC
 	${CMAKE_CURRENT_LIST_DIR}/include
 	${QMDNSENGINE_INCLUDE_DIRS}
